5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4431/executions/1649_2442.log
== SUBMITION (2019-04-04 19:30:19) 
-- CODE:

num = input("Digite um numero: ")

if (num % 2 == 0)
	mensagem = "Par"
else
	mensagem = "Impar"

print(mensagem)

-- EXECUTION TIME:
0.155645
-- ERROR:
  File "/home/codebench/codes/1649/2442/main.py", line 4
    if (num % 2 == 0)
                    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 19:30:30) 
-- CODE:

num = input("Digite um numero: ")
if (num % 2 == 0)
	mensagem = "Par"
else
	mensagem = "Impar"
print(mensagem)

-- ERROR:
File "XXXX", line 3
    if (num % 2 == 0)
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 19:30:40) 
-- CODE:

num = input("Digite um numero: ")
if (num % 2 == 0):
	mensagem = "Par"
else:
	mensagem = "Impar"
print(mensagem)

-- EXECUTION TIME:
0.151116
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1649/2442/main.py", line 3, in <module>
    if (num % 2 == 0):
TypeError: not all arguments converted during string formatting

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 19:30:42) 
-- CODE:

num = input("Digite um numero: ")
if (num % 2 == 0):
	mensagem = "Par"
else:
	mensagem = "Impar"
print(mensagem)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    if (num % 2 == 0):
TypeError: not all arguments converted during string formatting
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 19:30:57) 
-- CODE:

num = input("Digite um numero: ")
if (num % 2 == 0):
	mensagem = "Par"
else:
	mensagem = "Impar"
print(mensagem)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    if (num % 2 == 0):
TypeError: not all arguments converted during string formatting
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 20:32:32) 
-- CODE:
num =int(input("Digite um numero: "))
if (num % 2 == 0):
	mensagem = "Par"
else:
	mensagem = "Impar"
print(mensagem)

-- OUTPUT:
Impar
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 20:32:40) 
-- CODE:
num =int(input("Digite um numero: "))
if (num % 2 == 0):
	mensagem = "Par"
else:
	mensagem = "Impar"
print(mensagem)

-- EXECUTION TIME:
0.220496
-- TEST CASE 1:
---- input:
55
---- correct output:
impar
---- user output:
Impar
-- TEST CASE 3:
---- input:
842
---- correct output:
par
---- user output:
Par
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 20:32:47) 
-- CODE:
num =int(input("Digite um numero: "))
if (num % 2 == 0):
	mensagem = "Par"
else:
	mensagem = "Impar"
print(mensagem)

-- OUTPUT:
Impar
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 20:32:55) 
-- CODE:
num =int(input("Digite um numero: "))
if (num % 2 == 0):
	mensagem = "Par"
else:
	mensagem = "Impar"
print(mensagem)

-- OUTPUT:
Impar
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 20:33:07) 
-- CODE:
num =int(input("Digite um numero: "))
if (num % 2 == 0):
	mensagem = "Par"
else:
	mensagem = "Impar"
print(mensagem)

-- EXECUTION TIME:
0.151126
-- TEST CASE 1:
---- input:
55
---- correct output:
impar
---- user output:
Impar
-- TEST CASE 3:
---- input:
842
---- correct output:
par
---- user output:
Par
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 20:34:01) 
-- CODE:
num =int(input("Digite um numero: "))
if (num % 2 == 0):
	mensagem =("Par")
else:
	mensagem =("Impar")
print(mensagem)

-- OUTPUT:
Impar
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 20:34:29) 
-- CODE:
num =int(input("Digite um numero: "))
if (num % 2 == 0):
	mensagem =("par")
else:
	mensagem =("impar")
print(mensagem)

-- OUTPUT:
impar
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 20:34:32) 
-- CODE:
num =int(input("Digite um numero: "))
if (num % 2 == 0):
	mensagem =("par")
else:
	mensagem =("impar")
print(mensagem)

-- EXECUTION TIME:
0.220325
-- TEST CASE 1:
---- input:
55
---- correct output:
impar
---- user output:
impar
-- TEST CASE 3:
---- input:
842
---- correct output:
par
---- user output:
par
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 20:35:13) 
-- CODE:
num =int(input("Digite um numero: "))
if (num % 2 == 0):
	mensagem =("par")
else:
	mensagem =("impar")
print(mensagem)

-- OUTPUT:
impar
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 20:35:21) 
-- CODE:
num =int(input("Digite um numero: "))
if (num % 2 == 0):
	mensagem =("par")
else:
	mensagem =("impar")
print(mensagem)

-- EXECUTION TIME:
0.193277
-- TEST CASE 1:
---- input:
55
---- correct output:
impar
---- user output:
impar
-- TEST CASE 3:
---- input:
842
---- correct output:
par
---- user output:
par
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-05 13:18:36) 
-- CODE:
num =int(input("Digite um numero: "))
if (num % 2 == 0):
	mensagem =("par")
else:
	mensagem =("impar")
print(mensagem)

-- EXECUTION TIME:
0.138482
-- TEST CASE 1:
---- input:
55
---- correct output:
impar
---- user output:
impar
-- TEST CASE 3:
---- input:
842
---- correct output:
par
---- user output:
par
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
